<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewMovie">

    <EditText
        android:id="@+id/movieName"
        android:layout_width="269dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/enter_movie_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/plot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/plot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_plot_details"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/awards"
        app:layout_constraintEnd_toEndOf="@+id/awards"
        app:layout_constraintStart_toStartOf="@+id/movieName"
        app:layout_constraintTop_toBottomOf="@+id/movieName" />

    <EditText
        android:id="@+id/awards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_awards"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/ratings"
        app:layout_constraintEnd_toEndOf="@+id/ratings"
        app:layout_constraintStart_toStartOf="@+id/ratings"
        app:layout_constraintTop_toBottomOf="@+id/plot" />

    <EditText
        android:id="@+id/ratings"
        android:layout_width="274dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_ratings"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/addMovies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/awards" />

    <Button
        android:id="@+id/addMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="53dp"
        android:onClick="addNewMovieToDatabase"
        android:text="@string/add_new_movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratings" />
</androidx.constraintlayout.widget.ConstraintLayout>