<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeHome">

    <Button
        android:id="@+id/button3"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="84dp"
        android:text="@string/add_new_movies"
        android:onClick="addMOvieEmployee"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="146dp"
        android:layout_height="0dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="116dp"
        android:text="@string/go_to_user_home_page"
        android:onClick="homePage"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="131dp"
        android:layout_height="0dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="243dp"
        android:onClick="userManagement"
        android:text="@string/manage_users"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
</androidx.constraintlayout.widget.ConstraintLayout>